--- a/index.html
+++ b/index.html
@@ -1285,6 +1285,19 @@ class="w-full px-4 py-3 pr-12 rounded-md shadow-inner text-base bg-white text-bl
 
 
 
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const mobileMenu = document.getElementById('mobile-menu');
+    const navLinks = mobileMenu.querySelectorAll('a');
+
+    navLinks.forEach(link => {
+      link.addEventListener('click', () => {
+        // Menü schließen
+        mobileMenu.classList.add('hidden');
+      });
+    });
+  });
+</script>
 
 
 
